[tool.poetry]
name = "mudlark"
version = "0.1.0"
description = ""
authors = ["Michael Stewart <michael.stewart.webdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
typer = "^0.9.0"
pandas = "^2.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mudlark = "mudlark.main:app"