[tool.poetry]
name = "mudlark"
version = "0.2.1"
description = ""
authors = ["Michael Stewart <michael.stewart.webdev@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10,<3.13"
typer = "^0.9.0"
pandas = "^2.1.1"
loguru = "^0.7.2"
typer-config = {extras = ["all"], version = "^1.2.1"}
nltk = "^3.8.1"


[tool.poetry.group.test.dependencies]
pytest-cov = "^4.1.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
mudlark = "mudlark.main:app"